<resources>
    <string name="app_name">UVMe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">0</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">UV Sensor BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="ok_terms_of_service">You chose OK action for Terms of Services</string>
    <string name="cancel_terms_of_service">You chose Cancel action for Terms of Services</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="warning_label">
        WARNING: PLEASE READ THE DISCLAIMER BEFORE USING THIS APPLICATION\n
        \nThe UVMe app device and sensor are tools to help you enjoy your time in the sun.
        The purpose of the sensor and the app is to help reduce Ultraviolet (UV) exposure
        and avoid skin damage such as sunburns and skin damage. It is for personal use and
        may not be used as for medicinal advice. The information provided is not intended
        for treatment, diagnoses, nor for prevent or curing any diseases. Persons using
        the data within for medical purposes such as avoiding sun exposure for medical
        purposes, should not rely solely on the accuracy of the data herein. Some
        medicines and over the-counter drugs can cause the skin to sunburn very
        quickly. Talk with a medical specialist or pharmacist.
        \n
        \nThe calculations and formulas in the application are based on information
        provided by a variety of sources and cannot be exact. We do not have control
        on the accuracy of the input data by the users or their use of the device.
        The UVMe device can accurately measure UV ratings when properly used and
        functioning.
        \n
        \nThe application without connection to the UVMe device cannot measure to the
        actual amount of UV. The application calculates the amount of UV radiation
        based on UV index data available from https://www.epa.gov. All UV index
        forecasts have inaccuracies because they are predictions. https://www.epa.gov
        cannot be held responsible for any consequences that may result from the use
        of this application.\n
        \nThank you for using UVMe.
    </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Time">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string name="info_activity_url">
        <a href="https://www.canada.ca/en/environment-climate-change/services/weather-health/uv-index-sun-safety/how-to-use.html">UV index and sun safety</a>
    </string>
    <string name="you_are_safe">You\'re safe</string>
    <string name="take_precaution">Take precaution!</string>
    <string name="protection_required">Protection required!</string>
    <string name="extra_protection_required">Extra protection required!</string>
    <string name="take_full_precaution">Take full precaution!</string>
    <string name="AboutUVMe">UVMe was developed by 5 Concordia University students. Concordia is a university situated in Montreal, Canada. The team has since provided tools and educational content to teach people about UV and sun safety. We strongly believe in using technology for a healthy lifestyle.</string>
    <string name="AboutUVMe1">Technology for a healthy lifestyle</string>
    <string name="ContactUs">
    <a href="https://github.com/UmaidMalik/ELEC-COEN-390">Go to repo</a>
    </string>
    <string name="q_1">1. How does UVMe work?</string>
    <string name="q_2">2. The sun has not set but the app says there\'s no/little UV, is something wrong??</string>
    <string name="q_3">3. It\'s the middle of the day in winter and the sun is shining strong. UVMe says I\'m safe in the sun. What gives?</string>
    <string name="q_4">4. Does UVMe work on Apple Devices?</string>
    <string name="q_5">5. What percentage of UV light is blocked out by glass?</string>
    <string name="q_6">6. Would you please tell and guide me as to how to calculate the UV dose for air pollution treatment?</string>
    <string name="q_7">7. What causes absorption in the UV region?</string>
    <string name="q_8">8. What is the difference between a black-light and a blue-light?</string>
    <string name="q_9">9. When Ultraviolet (UV) radiation is used to treat water, does the water become radioactive?</string>
    <string name="q_10">10. In disinfecting water, does the temperature of the water and hence the lamp affect the UV output intensity? Is there an optimum operating temperature for the UV lamp and maximums and minimums thresholds?</string>
    <string name="q_11">11. Is it possible for the sun rays to be a danger to the skin even in cloudy weather?</string>
    <string name="q_12">12. Would the atmosphere become transparent to UV-C without an ozone layer?</string>
    <string name="q_13">13. We keep seeing the terms ‘watts’ and ‘joules’ in descriptions of how much UV is required to disinfect something. What do these terms mean? Are they the same? Why are they important?</string>
    <string name="ans_1a">UVMe is an android app that helps you stay safe in the sun by providing you real time UV intensity through a UV sensor. It uses forecast models that power many weather services. UVMe is very easy to understand and use wherever you are in the world.\n</string>
    <string name="ans_1b">Moreover, UVMe helps you understand the effect of UV on your skin. For instance, to most people, a UV index of 8 doesn\'t mean much. Understanding that you could burn in as little as 15 minutes is a lot more practical in terms of knowing the precautions you need to take to protect yourself.\n</string>
    <string name="ans_2">Sunset can occur much later into the evening during summer, particularly in countries close to the poles. However, the amount of UV close to sunset is a lot lower than noon, despite there still being plenty of visible light. The reason is when the sun is close to the horizon, light has to travel through a lot more atmosphere to reach the ground (compared to when it is directly above). By the time it reaches you, the particles in the atmosphere would have scattered most of the UV radiation. This concept actually makes dawn and dusk perfect times to enjoy the sun. There\'s sunlight, yet you are still safe from getting sunburnt!</string>
    <string name="ans_3">During winter, the sun does not \"rise\" as high up in the sky. Like dusk and dawn, the closeness to the horizon means that a lot of UV is scattered by the atmosphere, giving rise to a lower UV index.</string>
    <string name="ans_4">UVMe is an android-based application and unfortunately, it is currently unavailable for iOS (Apple) users. Thank you for understanding.</string>
    <string name="ans_5">Normal glass (as used in windows) is transparent to UV radiation to a wavelength of about 330 nm (UV-A). The transparency is quite high so almost all UV-A light will pass through glass. Below 330 nm (UV-B and UV-C), almost 100% is blocked by normal glass.\n</string>
    <string name="ans_6a">This is a very complex issue. First, you have to be able to calculate the fluence rate (irradiance) distribution within the UV reactor. This requires a sophisticated computer program. Then you must carry out a volume average of the fluence rate (irradiance) over the entire reactor. The residence time of the air in the reactor is given by: volume/(flow rate). The fluence (UV dose) is then the product of the average fluence rate and the residence time.\n</string>
    <string name="ans_6b">This calculated UV dose is a \"theoretical maximum\" because it assumes that the air is perfectly mixed (in a radial sense) as it passes through the reactor. This is usually not the case, so the actual fluence (UV dose) will be less than the theoretical maximum.\n</string>
    <string name="ans_6c">One can experimentally measure UV dose by using bio-dosimetry. Here a (non-pathogenic) microorganism is infected into the air upstream of the UV reactor and allowed to thoroughly mix in the air stream. Samples are taken of the upstream and downstream air (after mixing). These are then compared with a laboratory (determined using a collimated beam apparatus) fluence (UV dose)-response curve, where the fluences (UV doses) are accurately known.\n</string>
    <string name="ans_7a">Most molecules have absorption bands in the UV region. The absorption properties of a molecule are described by the \"absorbance\" (A) defined as\n</string>
    <string name="ans_7b">A = log[Eo/El]\n</string>
    <string name="ans_7c">where Eo and El are the irradiances incident and transmitted through a cell of depth l cm. The absorbance is also related to the concentration of the substance (let\'s call it X) by the relation\n</string>
    <string name="ans_7d">A = Îµ l [X]\n</string>
    <string name="ans_7e">where e is the \"molar absorption coefficient\" (units M-1 cm-1) and [X] is the concentration of X in molar (M) units (molar means mole/L)\n</string>
    <string name="ans_7f">When a molecule absorbs light, it is raised to an excited electronic state. In this excited state, it can react (either by dissociation or by reacting with another molecule) - this is called \"photochemistry\"; it can also return to the ground state either by releasing the excess energy as heat or by emitting a photon of light (this is called fluorescence).\n</string>
    <string name="ans_8a">A \"blacklight\" is a fluorescent light tube that emits at about 365 nm - this is just below the wavelengths that humans can see, but it is absorbed by most pigments in clothes so that they \"fluorescence\". This is the effect seen in many bars and discos.\n</string>
    <string name="ans_8b">I\'m not sure what you mean by a \"bluelight\" - perhaps you mean \"germicidal\" low-pressure mercury lamp. They do glow \"blue\", but most of their output is at 254 nm, so DO NOT look directly at such a lamp when it is operating. These lamps are used in air and water disinfection, since the 254 nm light is absorbed by DNA in bacteria and viruses causing their inactivation.\n</string>
    <string name="ans_9a">You are justifiably confused about the word \"radiation\". I prefer to use the term \"UV light\" rather than \"UV radiation\" for the very reason that you are confused. Ultraviolet is \"light\" - you can\'t see it because our eyes are not sensitive to UV; however, it is a form of light with wavelengths beyond the \"violet\" end (hence the term \"ultraviolet\") of the rainbow spectrum.\n</string>
</resources>