<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/midnight_blue"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/light_blue"
        android:fontFamily="@font/roboto_thin"
        android:id="@+id/activityUVSensor"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:background="@color/secondary_blue"
        >



        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/label_device_address"
                android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:fontFamily="@font/roboto_thin"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textColor="@color/light_blue"
                android:fontFamily="@font/roboto_thin"
                android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/disconnected"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/label_data"
                android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView android:id="@+id/data_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/no_data"
                android:textSize="18sp"/>
        </LinearLayout>
        <ExpandableListView android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue"
            android:fontFamily="@font/roboto_thin"/>

    </LinearLayout>
</LinearLayout>